--- a/2.md
+++ b/2.md
@@ -4,28 +4,28 @@
 
 Вот несколько основных библейских принципов, которые сравниваются с оккультными практиками:
 
- 1. Противопоставление оккультных практик и служения Богу
+ ### 1. Противопоставление оккультных практик и служения Богу
 
 Ветхий Завет ясно запрещает любые формы магии, колдовства и гаданий. Например:
 
 Второзаконие 18:10-12: «Не должен находиться у тебя проводящий сына своего или дочь свою через огонь, занимающийся гаданиями, волхвованиями, ворожбой, чародейством, околдовыванием, вызывающий духов, волшебством и вопрошающий мертвых. Ибо мерзок пред Господом всякий, делающий это...». Эти стихи осуждают любые формы оккультизма как мерзость перед Богом.
 
 
- 2. Поклонение одному Богу против идолопоклонства и оккультизма
+### 2. Поклонение одному Богу против идолопоклонства и оккультизма
 
 Оккультные практики часто связаны с идолопоклонством или вызовом потусторонних сил. Библия же ясно учит о поклонении только одному Богу:
 
 Исход 20:3-5: «Да не будет у тебя других богов перед лицем Моим. Не делай себе кумира и никакого изображения того, что на небе вверху, и что на земле внизу...». Этот запрет распространяется и на любые формы призыва сил, которые не принадлежат Богу.
 
 
- 3. Оккультные практики как форма обращения к демоническим силам
+### 3. Оккультные практики как форма обращения к демоническим силам
 
 В Библии некоторые оккультные практики ассоциируются с демоническими силами. Например, в истории о Сауле (1 Царств 28), когда он обратился к волшебнице, чтобы вызвать дух Самуила, это рассматривалось как нарушение Божьего закона, и Саул за это был осуждён.
 
 1 Царств 28:7-19: Саул ищет волшебницу из Аэндора, что приводит к трагическим последствиям. Эта история показывает, как оккультные практики могут привести к падению человека.
 
 
- 4. Новозаветные предупреждения о духовной чистоте
+ ### 4. Новозаветные предупреждения о духовной чистоте
 
 В Новом Завете также присутствуют предупреждения о необходимости избегать оккультных практик:
 
@@ -34,7 +34,7 @@
 Галатам 5:19-21: Среди «дел плоти» упоминаются чародейства, и апостол Павел предупреждает, что те, кто занимается такими практиками, не наследуют Царство Божие.
 
 
- 5. Духовная война
+### 5. Духовная война
 
 Библия также говорит о духовной войне, где верующие борются не только с физическими, но и с духовными силами зла:
 
